Projeto_Compilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM IDENTIFIER PONTOVIRGULA declaracaoFunctions declaracaoVars Corpo
Rule 2     declaracaoFunctions -> declaracaoFunctions declaracaoFunction
Rule 3     declaracaoFunctions -> declaracaoFunction
Rule 4     declaracaoFunctions -> <empty>
Rule 5     declaracaoFunction -> FUNCTION IDENTIFIER LPAREN argsFunction RPAREN DOISPONTOS Tipo PONTOVIRGULA declaracaoVars BEGIN Conteudo END PONTOVIRGULA
Rule 6     argsFunction -> <empty>
Rule 7     argsFunction -> vars
Rule 8     declaracaoVars -> VAR vars
Rule 9     declaracaoVars -> <empty>
Rule 10    vars -> vars var
Rule 11    vars -> var
Rule 12    var -> listaVars DOISPONTOS Tipo PONTOVIRGULA
Rule 13    var -> listaVars DOISPONTOS Tipo
Rule 14    var -> listaVars DOISPONTOS ARRAY LBRACKET NUMBER PONTO PONTO NUMBER RBRACKET OF Tipo PONTOVIRGULA
Rule 15    listaVars -> IDENTIFIER
Rule 16    listaVars -> listaVars VIRGULA IDENTIFIER
Rule 17    Tipo -> TYPEINTEGER
Rule 18    Tipo -> TYPESTRING
Rule 19    Tipo -> TYPEBOOLEAN
Rule 20    Corpo -> BEGIN Conteudo END PONTO
Rule 21    Corpo -> BEGIN Conteudo END
Rule 22    Conteudo -> Comando
Rule 23    Conteudo -> Conteudo Comando
Rule 24    Comando -> declaracaoIf
Rule 25    Comando -> For
Rule 26    Comando -> While
Rule 27    Comando -> Function
Rule 28    Comando -> IDENTIFIER ASSIGN Valor PONTOVIRGULA
Rule 29    Comando -> IDENTIFIER ASSIGN Valor
Rule 30    Comando -> IDENTIFIER ASSIGN CondA1 PONTOVIRGULA
Rule 31    Comando -> IDENTIFIER ASSIGN CondA1
Rule 32    Identifier -> IDENTIFIER
Rule 33    Identifier -> IDENTIFIER LBRACKET Valor RBRACKET
Rule 34    Valor -> Identifier
Rule 35    Valor -> NUMBER
Rule 36    Valor -> BOOLEAN
Rule 37    Valor -> STRING
Rule 38    Valor -> Function
Rule 39    Function -> IDENTIFIER LPAREN Valores RPAREN PONTOVIRGULA
Rule 40    Function -> IDENTIFIER LPAREN Valores RPAREN
Rule 41    Function -> IDENTIFIER LPAREN RPAREN PONTOVIRGULA
Rule 42    Function -> IDENTIFIER LPAREN RPAREN
Rule 43    declaracaoIf -> IF Cond THEN Conteudo
Rule 44    declaracaoIf -> IF Cond THEN Conteudo ELSE Conteudo
Rule 45    Cond -> LPAREN Cond RPAREN
Rule 46    Cond -> CondL1
Rule 47    CondL1 -> LPAREN CondL1 RPAREN
Rule 48    CondL1 -> CondL1 OR CondL2
Rule 49    CondL1 -> CondL2
Rule 50    CondL2 -> LPAREN CondL2 RPAREN
Rule 51    CondL2 -> CondL2 AND CondL3
Rule 52    CondL2 -> CondL3
Rule 53    CondL3 -> LPAREN CondL3 RPAREN
Rule 54    CondL3 -> NOT CondR1
Rule 55    CondL3 -> CondR1
Rule 56    CondR1 -> LPAREN CondR1 RPAREN
Rule 57    CondR1 -> CondA1 EQUAL CondA1
Rule 58    CondR1 -> CondA1 LESS CondA1
Rule 59    CondR1 -> CondA1 GREATER CondA1
Rule 60    CondR1 -> CondA1 LESSEQUAL CondA1
Rule 61    CondR1 -> CondA1 GREATEREQUAL CondA1
Rule 62    CondR1 -> CondA1 DIFFERENT CondA1
Rule 63    CondR1 -> CondA1
Rule 64    CondA1 -> LPAREN CondA1 RPAREN
Rule 65    CondA1 -> CondA1 SUM CondA2
Rule 66    CondA1 -> CondA1 SUB CondA2
Rule 67    CondA1 -> CondA2
Rule 68    CondA2 -> LPAREN CondA2 RPAREN
Rule 69    CondA2 -> CondA2 MUL CondA3
Rule 70    CondA2 -> CondA2 DIVREAL CondA3
Rule 71    CondA2 -> CondA2 DIV CondA3
Rule 72    CondA2 -> CondA2 MOD CondA3
Rule 73    CondA2 -> CondA3
Rule 74    CondA3 -> LPAREN CondA3 RPAREN
Rule 75    CondA3 -> Valor
Rule 76    Valores -> Valores VIRGULA Valor
Rule 77    Valores -> Valor
Rule 78    For -> FOR InicioFor TO FimFor DO BEGIN Conteudo END PONTOVIRGULA
Rule 79    For -> FOR InicioFor DOWNTO FimFor DO BEGIN Conteudo END PONTOVIRGULA
Rule 80    For -> FOR InicioFor TO FimFor DO Comando
Rule 81    For -> FOR InicioFor DOWNTO FimFor DO Comando
Rule 82    InicioFor -> Comando
Rule 83    FimFor -> Valor
Rule 84    While -> WHILE Cond DO BEGIN Conteudo END PONTOVIRGULA
Rule 85    While -> WHILE Cond DO Comando

Terminals, with rules where they appear

AND                  : 51
ARRAY                : 14
ASSIGN               : 28 29 30 31
BEGIN                : 5 20 21 78 79 84
BOOLEAN              : 36
DIFFERENT            : 62
DIV                  : 71
DIVREAL              : 70
DO                   : 78 79 80 81 84 85
DOISPONTOS           : 5 12 13 14
DOWNTO               : 79 81
ELSE                 : 44
END                  : 5 20 21 78 79 84
EQUAL                : 57
FOR                  : 78 79 80 81
FUNCTION             : 5
GREATER              : 59
GREATEREQUAL         : 61
IDENTIFIER           : 1 5 15 16 28 29 30 31 32 33 39 40 41 42
IF                   : 43 44
LBRACKET             : 14 33
LESS                 : 58
LESSEQUAL            : 60
LPAREN               : 5 39 40 41 42 45 47 50 53 56 64 68 74
MOD                  : 72
MUL                  : 69
NOT                  : 54
NUMBER               : 14 14 35
OF                   : 14
OR                   : 48
PONTO                : 14 14 20
PONTOVIRGULA         : 1 5 5 12 14 28 30 39 41 78 79 84
PROGRAM              : 1
RBRACKET             : 14 33
RPAREN               : 5 39 40 41 42 45 47 50 53 56 64 68 74
STRING               : 37
SUB                  : 66
SUM                  : 65
THEN                 : 43 44
TO                   : 78 80
TYPEBOOLEAN          : 19
TYPEINTEGER          : 17
TYPESTRING           : 18
VAR                  : 8
VIRGULA              : 16 76
WHILE                : 84 85
error                : 

Nonterminals, with rules where they appear

Comando              : 22 23 80 81 82 85
Cond                 : 43 44 45 84 85
CondA1               : 30 31 57 57 58 58 59 59 60 60 61 61 62 62 63 64 65 66
CondA2               : 65 66 67 68 69 70 71 72
CondA3               : 69 70 71 72 73 74
CondL1               : 46 47 48
CondL2               : 48 49 50 51
CondL3               : 51 52 53
CondR1               : 54 55 56
Conteudo             : 5 20 21 23 43 44 44 78 79 84
Corpo                : 1
FimFor               : 78 79 80 81
For                  : 25
Function             : 27 38
Identifier           : 34
InicioFor            : 78 79 80 81
Tipo                 : 5 12 13 14
Valor                : 28 29 33 75 76 77 83
Valores              : 39 40 76
While                : 26
argsFunction         : 5
declaracaoFunction   : 2 3
declaracaoFunctions  : 1 2
declaracaoIf         : 24
declaracaoVars       : 1 5
listaVars            : 12 13 14 16
program              : 0
var                  : 10 11
vars                 : 7 8 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM IDENTIFIER PONTOVIRGULA declaracaoFunctions declaracaoVars Corpo

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . IDENTIFIER PONTOVIRGULA declaracaoFunctions declaracaoVars Corpo

    IDENTIFIER      shift and go to state 3


state 3

    (1) program -> PROGRAM IDENTIFIER . PONTOVIRGULA declaracaoFunctions declaracaoVars Corpo

    PONTOVIRGULA    shift and go to state 4


state 4

    (1) program -> PROGRAM IDENTIFIER PONTOVIRGULA . declaracaoFunctions declaracaoVars Corpo
    (2) declaracaoFunctions -> . declaracaoFunctions declaracaoFunction
    (3) declaracaoFunctions -> . declaracaoFunction
    (4) declaracaoFunctions -> .
    (5) declaracaoFunction -> . FUNCTION IDENTIFIER LPAREN argsFunction RPAREN DOISPONTOS Tipo PONTOVIRGULA declaracaoVars BEGIN Conteudo END PONTOVIRGULA

  ! shift/reduce conflict for FUNCTION resolved as shift
    VAR             reduce using rule 4 (declaracaoFunctions -> .)
    BEGIN           reduce using rule 4 (declaracaoFunctions -> .)
    FUNCTION        shift and go to state 7

  ! FUNCTION        [ reduce using rule 4 (declaracaoFunctions -> .) ]

    declaracaoFunctions            shift and go to state 5
    declaracaoFunction             shift and go to state 6

state 5

    (1) program -> PROGRAM IDENTIFIER PONTOVIRGULA declaracaoFunctions . declaracaoVars Corpo
    (2) declaracaoFunctions -> declaracaoFunctions . declaracaoFunction
    (8) declaracaoVars -> . VAR vars
    (9) declaracaoVars -> .
    (5) declaracaoFunction -> . FUNCTION IDENTIFIER LPAREN argsFunction RPAREN DOISPONTOS Tipo PONTOVIRGULA declaracaoVars BEGIN Conteudo END PONTOVIRGULA

    VAR             shift and go to state 10
    BEGIN           reduce using rule 9 (declaracaoVars -> .)
    FUNCTION        shift and go to state 7

    declaracaoVars                 shift and go to state 8
    declaracaoFunction             shift and go to state 9

state 6

    (3) declaracaoFunctions -> declaracaoFunction .

    VAR             reduce using rule 3 (declaracaoFunctions -> declaracaoFunction .)
    FUNCTION        reduce using rule 3 (declaracaoFunctions -> declaracaoFunction .)
    BEGIN           reduce using rule 3 (declaracaoFunctions -> declaracaoFunction .)


state 7

    (5) declaracaoFunction -> FUNCTION . IDENTIFIER LPAREN argsFunction RPAREN DOISPONTOS Tipo PONTOVIRGULA declaracaoVars BEGIN Conteudo END PONTOVIRGULA

    IDENTIFIER      shift and go to state 11


state 8

    (1) program -> PROGRAM IDENTIFIER PONTOVIRGULA declaracaoFunctions declaracaoVars . Corpo
    (20) Corpo -> . BEGIN Conteudo END PONTO
    (21) Corpo -> . BEGIN Conteudo END

    BEGIN           shift and go to state 13

    Corpo                          shift and go to state 12

state 9

    (2) declaracaoFunctions -> declaracaoFunctions declaracaoFunction .

    VAR             reduce using rule 2 (declaracaoFunctions -> declaracaoFunctions declaracaoFunction .)
    FUNCTION        reduce using rule 2 (declaracaoFunctions -> declaracaoFunctions declaracaoFunction .)
    BEGIN           reduce using rule 2 (declaracaoFunctions -> declaracaoFunctions declaracaoFunction .)


state 10

    (8) declaracaoVars -> VAR . vars
    (10) vars -> . vars var
    (11) vars -> . var
    (12) var -> . listaVars DOISPONTOS Tipo PONTOVIRGULA
    (13) var -> . listaVars DOISPONTOS Tipo
    (14) var -> . listaVars DOISPONTOS ARRAY LBRACKET NUMBER PONTO PONTO NUMBER RBRACKET OF Tipo PONTOVIRGULA
    (15) listaVars -> . IDENTIFIER
    (16) listaVars -> . listaVars VIRGULA IDENTIFIER

    IDENTIFIER      shift and go to state 17

    vars                           shift and go to state 14
    var                            shift and go to state 15
    listaVars                      shift and go to state 16

state 11

    (5) declaracaoFunction -> FUNCTION IDENTIFIER . LPAREN argsFunction RPAREN DOISPONTOS Tipo PONTOVIRGULA declaracaoVars BEGIN Conteudo END PONTOVIRGULA

    LPAREN          shift and go to state 18


state 12

    (1) program -> PROGRAM IDENTIFIER PONTOVIRGULA declaracaoFunctions declaracaoVars Corpo .

    $end            reduce using rule 1 (program -> PROGRAM IDENTIFIER PONTOVIRGULA declaracaoFunctions declaracaoVars Corpo .)


state 13

    (20) Corpo -> BEGIN . Conteudo END PONTO
    (21) Corpo -> BEGIN . Conteudo END
    (22) Conteudo -> . Comando
    (23) Conteudo -> . Conteudo Comando
    (24) Comando -> . declaracaoIf
    (25) Comando -> . For
    (26) Comando -> . While
    (27) Comando -> . Function
    (28) Comando -> . IDENTIFIER ASSIGN Valor PONTOVIRGULA
    (29) Comando -> . IDENTIFIER ASSIGN Valor
    (30) Comando -> . IDENTIFIER ASSIGN CondA1 PONTOVIRGULA
    (31) Comando -> . IDENTIFIER ASSIGN CondA1
    (43) declaracaoIf -> . IF Cond THEN Conteudo
    (44) declaracaoIf -> . IF Cond THEN Conteudo ELSE Conteudo
    (78) For -> . FOR InicioFor TO FimFor DO BEGIN Conteudo END PONTOVIRGULA
    (79) For -> . FOR InicioFor DOWNTO FimFor DO BEGIN Conteudo END PONTOVIRGULA
    (80) For -> . FOR InicioFor TO FimFor DO Comando
    (81) For -> . FOR InicioFor DOWNTO FimFor DO Comando
    (84) While -> . WHILE Cond DO BEGIN Conteudo END PONTOVIRGULA
    (85) While -> . WHILE Cond DO Comando
    (39) Function -> . IDENTIFIER LPAREN Valores RPAREN PONTOVIRGULA
    (40) Function -> . IDENTIFIER LPAREN Valores RPAREN
    (41) Function -> . IDENTIFIER LPAREN RPAREN PONTOVIRGULA
    (42) Function -> . IDENTIFIER LPAREN RPAREN

    IDENTIFIER      shift and go to state 25
    IF              shift and go to state 26
    FOR             shift and go to state 27
    WHILE           shift and go to state 28

    Conteudo                       shift and go to state 19
    Comando                        shift and go to state 20
    declaracaoIf                   shift and go to state 21
    For                            shift and go to state 22
    While                          shift and go to state 23
    Function                       shift and go to state 24

state 14

    (8) declaracaoVars -> VAR vars .
    (10) vars -> vars . var
    (12) var -> . listaVars DOISPONTOS Tipo PONTOVIRGULA
    (13) var -> . listaVars DOISPONTOS Tipo
    (14) var -> . listaVars DOISPONTOS ARRAY LBRACKET NUMBER PONTO PONTO NUMBER RBRACKET OF Tipo PONTOVIRGULA
    (15) listaVars -> . IDENTIFIER
    (16) listaVars -> . listaVars VIRGULA IDENTIFIER

    BEGIN           reduce using rule 8 (declaracaoVars -> VAR vars .)
    IDENTIFIER      shift and go to state 17

    var                            shift and go to state 29
    listaVars                      shift and go to state 16

state 15

    (11) vars -> var .

    IDENTIFIER      reduce using rule 11 (vars -> var .)
    BEGIN           reduce using rule 11 (vars -> var .)
    RPAREN          reduce using rule 11 (vars -> var .)


state 16

    (12) var -> listaVars . DOISPONTOS Tipo PONTOVIRGULA
    (13) var -> listaVars . DOISPONTOS Tipo
    (14) var -> listaVars . DOISPONTOS ARRAY LBRACKET NUMBER PONTO PONTO NUMBER RBRACKET OF Tipo PONTOVIRGULA
    (16) listaVars -> listaVars . VIRGULA IDENTIFIER

    DOISPONTOS      shift and go to state 30
    VIRGULA         shift and go to state 31


state 17

    (15) listaVars -> IDENTIFIER .

    DOISPONTOS      reduce using rule 15 (listaVars -> IDENTIFIER .)
    VIRGULA         reduce using rule 15 (listaVars -> IDENTIFIER .)


state 18

    (5) declaracaoFunction -> FUNCTION IDENTIFIER LPAREN . argsFunction RPAREN DOISPONTOS Tipo PONTOVIRGULA declaracaoVars BEGIN Conteudo END PONTOVIRGULA
    (6) argsFunction -> .
    (7) argsFunction -> . vars
    (10) vars -> . vars var
    (11) vars -> . var
    (12) var -> . listaVars DOISPONTOS Tipo PONTOVIRGULA
    (13) var -> . listaVars DOISPONTOS Tipo
    (14) var -> . listaVars DOISPONTOS ARRAY LBRACKET NUMBER PONTO PONTO NUMBER RBRACKET OF Tipo PONTOVIRGULA
    (15) listaVars -> . IDENTIFIER
    (16) listaVars -> . listaVars VIRGULA IDENTIFIER

    RPAREN          reduce using rule 6 (argsFunction -> .)
    IDENTIFIER      shift and go to state 17

    argsFunction                   shift and go to state 32
    vars                           shift and go to state 33
    var                            shift and go to state 15
    listaVars                      shift and go to state 16

state 19

    (20) Corpo -> BEGIN Conteudo . END PONTO
    (21) Corpo -> BEGIN Conteudo . END
    (23) Conteudo -> Conteudo . Comando
    (24) Comando -> . declaracaoIf
    (25) Comando -> . For
    (26) Comando -> . While
    (27) Comando -> . Function
    (28) Comando -> . IDENTIFIER ASSIGN Valor PONTOVIRGULA
    (29) Comando -> . IDENTIFIER ASSIGN Valor
    (30) Comando -> . IDENTIFIER ASSIGN CondA1 PONTOVIRGULA
    (31) Comando -> . IDENTIFIER ASSIGN CondA1
    (43) declaracaoIf -> . IF Cond THEN Conteudo
    (44) declaracaoIf -> . IF Cond THEN Conteudo ELSE Conteudo
    (78) For -> . FOR InicioFor TO FimFor DO BEGIN Conteudo END PONTOVIRGULA
    (79) For -> . FOR InicioFor DOWNTO FimFor DO BEGIN Conteudo END PONTOVIRGULA
    (80) For -> . FOR InicioFor TO FimFor DO Comando
    (81) For -> . FOR InicioFor DOWNTO FimFor DO Comando
    (84) While -> . WHILE Cond DO BEGIN Conteudo END PONTOVIRGULA
    (85) While -> . WHILE Cond DO Comando
    (39) Function -> . IDENTIFIER LPAREN Valores RPAREN PONTOVIRGULA
    (40) Function -> . IDENTIFIER LPAREN Valores RPAREN
    (41) Function -> . IDENTIFIER LPAREN RPAREN PONTOVIRGULA
    (42) Function -> . IDENTIFIER LPAREN RPAREN

    END             shift and go to state 34
    IDENTIFIER      shift and go to state 25
    IF              shift and go to state 26
    FOR             shift and go to state 27
    WHILE           shift and go to state 28

    Comando                        shift and go to state 35
    declaracaoIf                   shift and go to state 21
    For                            shift and go to state 22
    While                          shift and go to state 23
    Function                       shift and go to state 24

state 20

    (22) Conteudo -> Comando .

    END             reduce using rule 22 (Conteudo -> Comando .)
    IDENTIFIER      reduce using rule 22 (Conteudo -> Comando .)
    IF              reduce using rule 22 (Conteudo -> Comando .)
    FOR             reduce using rule 22 (Conteudo -> Comando .)
    WHILE           reduce using rule 22 (Conteudo -> Comando .)
    ELSE            reduce using rule 22 (Conteudo -> Comando .)
    TO              reduce using rule 22 (Conteudo -> Comando .)
    DOWNTO          reduce using rule 22 (Conteudo -> Comando .)


state 21

    (24) Comando -> declaracaoIf .

    END             reduce using rule 24 (Comando -> declaracaoIf .)
    IDENTIFIER      reduce using rule 24 (Comando -> declaracaoIf .)
    IF              reduce using rule 24 (Comando -> declaracaoIf .)
    FOR             reduce using rule 24 (Comando -> declaracaoIf .)
    WHILE           reduce using rule 24 (Comando -> declaracaoIf .)
    TO              reduce using rule 24 (Comando -> declaracaoIf .)
    DOWNTO          reduce using rule 24 (Comando -> declaracaoIf .)
    ELSE            reduce using rule 24 (Comando -> declaracaoIf .)


state 22

    (25) Comando -> For .

    END             reduce using rule 25 (Comando -> For .)
    IDENTIFIER      reduce using rule 25 (Comando -> For .)
    IF              reduce using rule 25 (Comando -> For .)
    FOR             reduce using rule 25 (Comando -> For .)
    WHILE           reduce using rule 25 (Comando -> For .)
    TO              reduce using rule 25 (Comando -> For .)
    DOWNTO          reduce using rule 25 (Comando -> For .)
    ELSE            reduce using rule 25 (Comando -> For .)


state 23

    (26) Comando -> While .

    END             reduce using rule 26 (Comando -> While .)
    IDENTIFIER      reduce using rule 26 (Comando -> While .)
    IF              reduce using rule 26 (Comando -> While .)
    FOR             reduce using rule 26 (Comando -> While .)
    WHILE           reduce using rule 26 (Comando -> While .)
    TO              reduce using rule 26 (Comando -> While .)
    DOWNTO          reduce using rule 26 (Comando -> While .)
    ELSE            reduce using rule 26 (Comando -> While .)


state 24

    (27) Comando -> Function .

    END             reduce using rule 27 (Comando -> Function .)
    IDENTIFIER      reduce using rule 27 (Comando -> Function .)
    IF              reduce using rule 27 (Comando -> Function .)
    FOR             reduce using rule 27 (Comando -> Function .)
    WHILE           reduce using rule 27 (Comando -> Function .)
    TO              reduce using rule 27 (Comando -> Function .)
    DOWNTO          reduce using rule 27 (Comando -> Function .)
    ELSE            reduce using rule 27 (Comando -> Function .)


state 25

    (28) Comando -> IDENTIFIER . ASSIGN Valor PONTOVIRGULA
    (29) Comando -> IDENTIFIER . ASSIGN Valor
    (30) Comando -> IDENTIFIER . ASSIGN CondA1 PONTOVIRGULA
    (31) Comando -> IDENTIFIER . ASSIGN CondA1
    (39) Function -> IDENTIFIER . LPAREN Valores RPAREN PONTOVIRGULA
    (40) Function -> IDENTIFIER . LPAREN Valores RPAREN
    (41) Function -> IDENTIFIER . LPAREN RPAREN PONTOVIRGULA
    (42) Function -> IDENTIFIER . LPAREN RPAREN

    ASSIGN          shift and go to state 36
    LPAREN          shift and go to state 37


state 26
